# hello-solana

./: Anchor.toml  Cargo.toml
examples/: Cargo.toml
examples/examples/: favour.rs  foo.rs  program_a.rs  send_sol.rs
examples/src/: lib.rs  main.rs
programs/counter/src/: lib.rs
programs/favour/: Cargo.toml
programs/favour/src/: lib.rs
programs/favour/tests/: tests.rs
programs/foo/: Cargo.toml
programs/foo/src/: lib.rs
programs/program-a/src/: lib.rs
programs/program-b/src/: lib.rs
tests/: foo.ts
