[package]
name = "foo-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1 ", features = ["async"] }
shellexpand = "3.1.0"
solana-sdk = "1.17.3"
tokio = { version = "1.41.1", features = ["macros"] }
favour = { path = "../programs/favour" }
foo = { path = "../programs/foo" }
eyre = "0.6.12"
