[package]
name = "foo-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1 ", features = ["async"] }
eyre = "0.6.12"
foo = { path = "../programs/foo" }
favour = { path = "../programs/favour" }
program-a = { path = "../programs/program-a" }
program-b = { path = "../programs/program-b" }
shellexpand = "3.1.0"
solana-sdk = "1.17.3"
solana-rpc-client = { version = "1.17.3", features = ["spinner"] }
tokio = { version = "1.41.1", features = ["macros"] }
