[package]
name = "favour"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "favour"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

[dev-dependencies]
solana-program-test = "1.17.3"
tokio = { version = "1.41.1", features = ["macros"] }
solana-sdk = "1.17.3"
spl-associated-token-account = "3.0.4"
